Master Page yapısı oluşturuldu. Kos Takip ekranı tasarlandı.

--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/footer/footer.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<footer class="page-footer font-small teal pt-4 bordered" style="background-color: darkgray;">
+
+  <div class="container-fluid text-center text-md-left" >
+    <div class="row">
+      <div class="col mt-md-0 mt-3 text-center">
+        <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil
+          repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae
+          harum esse fugiat. Itaque, culpa?
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright text-center py-3">
+    © 2020 Copyright:
+    <a> Protek Sağlık Bilişim</a>
+  </div>
+</footer>
