--- a/guneyteletipUI/src/app/Features/Private/Dashboard/Pages/dashboard/dashboard.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Dashboard/Pages/dashboard/dashboard.component.html
@@ -1,1 +1,33 @@
-<p>dashboard works!</p>
+<div class="container-fluid h-100">
+  <div class="row h-100 pt-1">
+    <div class="col-md-12">
+      <div class="row mb-0">
+        <div class="col">
+          <h2>KOS Gönderim Kayıtları</h2>
+          <small>Kos Takip > KOS Gönderim Kayıtları</small>
+        </div>
+      </div>
+      <div class="row mb-3">
+      </div>
+      <div class="row mb-3">
+        <div class="col">
+          <app-dashboardfilter></app-dashboardfilter>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-md-9">
+          <app-dashboardgrid></app-dashboardgrid>
+        </div>
+        <div class="col-md-3 marginClass">
+          <app-dashboard-statistic></app-dashboard-statistic>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <app-dashboardtabs></app-dashboardtabs>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
