--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidemenu/sidemenu.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidemenu/sidemenu.component.html
@@ -1,1 +1,11 @@
-<p>sidemenu works!</p>
+<div class="bg-dark border-right" id="sidebar-wrapper">
+  <div class="sidebar-heading text-light">Dashboard </div>
+  <div class="list-group list-group-flush">
+    <a href="#" class="list-group-item list-group-item-action bg-light ">Dashboard</a>
+    <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
+    <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
+    <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
+    <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
+    <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+  </div>
+</div>
