--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/footer/footer.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/footer/footer.component.html
@@ -1,19 +1,17 @@
-<footer class="page-footer font-small teal pt-4 bordered" style="background-color: darkgray;">
-
-  <div class="container-fluid text-center text-md-left" >
+<footer class="page-footer font-small teal pt-4 bordered" style="background-color: lightgray;">
+  <div class="container pb-4">
     <div class="row">
-      <div class="col mt-md-0 mt-3 text-center">
-        <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil
-          repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae
-          harum esse fugiat. Itaque, culpa?
-        </p>
+      <div class="col border-right border-dark text-right">
+        <p class="m-0">Radbil İletisim  : <span class="text-primary">0(222) 444 11 33</span> </p>
+        <p class="m-0">XYZ Mah , ABC Sk No: 3.14 </p>
+        <p class="m-0">KOCAELİ/GEBZE  </p>
+      </div>
+      <div class="col text-left">
+        <p class="m-0"></p>
+        <p class="m-0">By@Protek Saglik bilisim </p>
+        <p class="m-0">Teknik iletisim : <span class="text-primary">Protek Saglik bilisim </span> </p>
+        <p class="m-0">Versiyon : <span class="text-primary"> 0.0.0.0</span></p>
       </div>
     </div>
-  </div>
-  <div class="footer-copyright text-center py-3">
-    © 2020 Copyright:
-    <a> Protek Sağlık Bilişim</a>
   </div>
 </footer>
