--- a/guneyteletipUI/src/styles.css
+++ b/guneyteletipUI/src/styles.css
@@ -36,5 +36,12 @@ table td {
 .pull-right {
   float: right !important;
 }
-
+input {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+select {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
 
