--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usergrid/usergrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usergrid/usergrid.component.html
@@ -1,6 +1,7 @@
-<button class="btn btn-info smalbutton" tooltip="Ekle"><fa name="plus-circle"></fa></button>
-<button class="btn btn-primary smalbutton" tooltip="Güncelle"><fa name="pencil"></fa></button>
-<button class="btn btn-danger smalbutton" tooltip="Sil"><fa name="trash"></fa></button>
+
+<button (click)="openEditUserModal('ekle')" class="btn btn-info smalbutton" tooltip="Ekle"><fa name="plus-circle"></fa></button>
+<button (click)="openEditUserModal('düzenle')" class="btn btn-primary smalbutton" tooltip="Güncelle"><fa name="pencil"></fa></button>
+<button (click)="openConfirmationDialog()"class="btn btn-danger smalbutton" tooltip="Sil"><fa name="trash"></fa></button>
 <div class="card mt-2">
   <div class="card-header">
     <fa name="list"></fa>
