Servisler için Ana Çatı oluşturuldu.

--- a/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
+++ b/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
@@ -15,7 +15,7 @@
               </div>
               <div class="form-group">
                 <label class="labelText">Şifre</label>
-                <input type="text" class="form-control" name="password" [(ngModel)]="password">
+                <input type="password" class="form-control" name="password" [(ngModel)]="password">
               </div>
 
               <div class="custom-control custom-checkbox mb-3">
@@ -44,10 +44,10 @@
       <footer class="page-footer font-small teal pt-4 bordered">
         <div class="container pb-4  shadow-lg">
           <div class="row">
-            <div class="col  text-center">
-              <a routerLink="#" class="infoText">GİZLİLİK ŞÖZLEŞMESİ</a>
-              <hr />
-            </div>
+            <!--<div class="col  text-center">
+    <a routerLink="#" class="infoText">GİZLİLİK ŞÖZLEŞMESİ</a>
+    <hr />
+  </div>-->
             <div class="col  text-center">
               <a routerLink="#" class="infoText">AYDINLATMA VE ONAM FORMU</a>
               <hr />
@@ -55,10 +55,10 @@
               <p class="m-0">Teknik İletisim  : <span class="text-primary">0(222) 444 11 33</span> </p>
               <p class="m-0">Radbil İletişim  : <span class="text-primary">0(333) 555 22 44</span></p>
             </div>
-            <div class="col  text-center">
-              <a routerLink="#" class="infoText">MESAFELİ SATIŞ ŞÖZLEŞMESİ</a>
-              <hr />
-            </div>
+            <!--<div class="col  text-center">
+    <a routerLink="#" class="infoText">MESAFELİ SATIŞ ŞÖZLEŞMESİ</a>
+    <hr />
+  </div>-->
           </div>
         </div>
       </footer>
