--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
@@ -1,14 +1,26 @@
 <div>
   <tabset>
     <tab heading="Kos Detay" id="tab1">
-      Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      <div class="row">
+        <div class="col-md-4">
+          <label class="font-weight-bold">Role Seçimi</label>
+          <div class="input-group input-group-sm">
+            <select class="form-control input-sm" name="ddlState">
+              <option value="undefined">Admin</option>
+              <option value="undefined">Yönetici</option>
+              <option value="undefined">Raportör</option>
+              <option value="undefined">Editör</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label class="font-weight-bold">Hastane Seçimi</label>
+          <ngx-select-dropdown [multiple]="true" [options]="options" [config]="config"></ngx-select-dropdown>
+        </div>
+      </div>
     </tab>
     <tab heading="Tab 2">
-      Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+     
     </tab>
   </tabset>
 </div>
