--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -1,7 +1,10 @@
 <div class="m-0">
-  <button class="btn btn-info smalbutton" tooltip="Ekle"><fa name="plus-circle"></fa></button>
-  <button class="btn btn-primary smalbutton" tooltip="Güncelle"><fa name="pencil"></fa></button>
-  <button class="btn btn-danger smalbutton" tooltip="Sil"><fa name="trash"></fa></button>
+  <button class="btn btn-info smalbutton" tooltip="Seçilenlerin KOS'larını Gönder"><fa name="share-square"></fa></button>
+  <button class="btn btn-danger smalbutton" tooltip="Seçilenlerin KOS'larını Teletıp'tan sil"><fa name="trash"></fa></button>
+  <button class="btn btn-primary smalbutton" tooltip="Seçilenlerin KOS Durumlarını Teletıp'tan oku"><fa name="get-pocket"></fa></button>
+  <button class="btn btn-info smalbutton" tooltip="Seçilenler için PACS'tan talep yap"><fa name="plus-circle"></fa></button>
+  <button class="btn btn-primary smalbutton" tooltip="Seçilenlerin görüntülerini PACS'a gönder"><fa name="share-square"></fa></button>
+  <button class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
 </div>
 
 <div class="card mt-2">
