--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
@@ -4,7 +4,13 @@
     <div class="form-row p-0 ">
       <div class="col-md-3">
         <label class="font-weight-bold">Hastane Seçimi</label>
-          <ngx-select-dropdown  [multiple]="true" [options]="options" [config]="config"></ngx-select-dropdown>
+        <ng-multiselect-dropdown [placeholder]="'Hastane Seçimi'"
+                                 [data]="dropdownList"
+                                 [(ngModel)]="selectedItems"
+                                 [settings]="dropdownSettings"
+                                 (onSelect)="onItemSelect($event)"
+                                 (onSelectAll)="onSelectAll($event)">
+        </ng-multiselect-dropdown>
       </div>
       <div class="col-md-3">
         <label class="font-weight-bold">Tarih Aralığı</label>
