--- a/guneyteletipUI/src/app/Shared/Modals/confirmationdialog/confirmationdialog.component.html
+++ b/guneyteletipUI/src/app/Shared/Modals/confirmationdialog/confirmationdialog.component.html
@@ -9,6 +9,6 @@
   <p>{{message}}</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="modal.onClose('close')">İptal</button>
-  <button type="button" class="btn btn-danger" (click)="modal.onClose('ok')">Sil</button>
+  <button type="button" class="btn btn-primary" (click)="onConfirm()">İptal</button>
+  <button type="button" class="btn btn-danger" (click)="onCancel()">Sil</button>
 </div>
